@@ -2,6 +2,7 @@ Revision history for Dancer-Session-MongoDB
 
 {{$NEXT}}
 	- Now allows passing options to MongoDB::Connection's new() method
+    - Relies on Mongo to generate a session id
 	- BACKWORDS COMPATIBILITY BROKEN: the 'db_name' option for new()
 	  is changed to 'session_db_name'. Read the note in the new()
 	  method's documentation.
